# leti-term03-OOP

./: .gitignore  CMakeLists.txt  README.md
coursework/: CMakeLists.txt  README.md  communicator.h
coursework/application/: box.cpp  box.h  game-settings.h  game.cpp  game.h  interface.cpp  interface.h  main.cpp  player.cpp  player.h  window-help.h
coursework/communicator/: communicator.cpp  communicator.h
courseworkV3/: config.h  report.docx
courseworkV3/communicator/: communicator.h
courseworkV3/dashboard/: CMakeLists.txt  application.cpp  application.h  interface.cpp  interface.h  main.cpp
courseworkV3/roads/: CMakeLists.txt  application.cpp  application.h  interface.cpp  interface.h  sample-light.cpp  sample-light.h  sample-road.cpp  sample-road.h  traffic-light.cpp  traffic-light.h
practice01/: CMakeLists.txt  README.md  application.cpp  application.h  main01.cpp  matrix.cpp  matrix.h  number.h  report.docx
practice02/: CMakeLists.txt  README.md  application.cpp  matrix.cpp  mycomplex.cpp  mycomplex.h  number.h  report.docx
practice03/: CMakeLists.txt  README.md  interface.cpp  interface.h  main.cpp  matrix.h  number.h  rational.cpp  rational.h  report.docx
practice04/client/: interface.cpp  interface.h
practice04/common/: common.h  communicator.cpp  communicator.h
practice04/server/: application.cpp  application.h  matrix.cpp  number.h  rational.cpp  rational.h
practice05/client/: CMakeLists.txt  application.cpp  application.h  client.pro  interface.cpp
practice05/common/: common.h
practice05/server/: CMakeLists.txt  application.cpp  matrix.cpp  rational.cpp  server.pro  square_matrix.cpp
practice06/: 2372_Полуянов_6.docx
practice06/client/: CMakeLists.txt  application.cpp  application.h  interface.cpp  interface.h
practice06/common/: common.cpp  common.h  communicator.cpp  communicator.h
practice06/server/: CMakeLists.txt  application.cpp  application.h  matrix.h  mycomplex.cpp  rational.cpp  rational.h  square_matrix.h
practice07/: CMakeLists.txt  graph.cpp  graph.h  input.txt  input1.txt  input2.txt  input3.txt  interface.cpp  interface.h  main.cpp  parser.cpp  parser.h  sample.cpp  sample.h
practice07/client/: CMakeLists.txt  interface.cpp  interface.h
practice07/common/: common.h
practice07/server/: CMakeLists.txt  application.cpp  application.h  direct_graph.cpp  direct_graph.h  input.txt  main.cpp  matrix.h  mycomplex.h  rational.cpp  square_matrix.h
practice08/: 2372_Полуянов_8.docx  CMakeLists.txt  graph.h  input1.txt  interface.cpp  interface.h  main.cpp  parser.cpp  parser.h  sample-switcher.cpp  sample-switcher.h  sample.h
