cmake_minimum_required(VERSION 3.26)
project(OOP)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(practice01)
add_subdirectory(practice02)
add_subdirectory(practice03)
add_subdirectory(practice05/server)
add_subdirectory(practice05/client)
add_subdirectory(practice06/server)
add_subdirectory(practice06/client)
add_subdirectory(practice07)
add_subdirectory(practice08)
add_subdirectory(coursework)
add_subdirectory(courseworkV3/roads)
add_subdirectory(courseworkV3/dashboard)